# Standart-classes-and-templates-of-c-

./: CMakeLists.txt  README.md
Main/: CMakeLists.txt  main.cpp
TAllocator/: CMakeLists.txt  TAllocator.h
TArray/: CMakeLists.txt  TArray methods.md  TArray.h
TReverseIterator/: CMakeLists.txt  TReverseIterator.h
TString/: CMakeLists.txt  TString.cpp  TString.h
TVector/: CMakeLists.txt  TVector.h
